--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -65,8 +65,9 @@
         opacity: 0;
         bottom: 0;
         right: 0;
+        z-index: 1000;
         &:hover{
-            opacity: 1;
+            opacity: 1 !important;
         }
     }
     .col-resize{
